@@ -154,15 +154,15 @@ if test x$enable_fastfileio != xno; then
     D2X_FEATURES="fastfileio ${D2X_FEATURES}"
 fi
 
-dnl Build with CONSOLE? 	 
-AC_ARG_ENABLE(console, 	 
-    [  --enable-console        Enable console (experimental) ],,) 	 
-if test x$enable_console = xyes; then 	 
-    AC_DEFINE(CONSOLE,,[Define to enable console]) 	 
+dnl Build with CONSOLE?
+AC_ARG_ENABLE(console,
+    [  --enable-console        Enable console (experimental) ],,)
+if test x$enable_console = xyes; then
+    AC_DEFINE(CONSOLE,,[Define to enable console])
     D2X_SUBDIRS=console
-fi 	 
+fi
 AM_CONDITIONAL(CONSOLE, test x$enable_console = xyes)
- 
+
 AC_ARG_WITH(sharepath,
     [[  --with-sharepath=DIR    Use DIR for shared game data (unix only) [DATADIR/games/d2x]]],
     sharepath=$withval, sharepath="auto")
