@@ -1,3 +1,8 @@
+2003-06-02  Bradley Bell  <btb@icculus.org>
+
+	* configure.ac, main/console.c: set console background, fix
+	whitespace
+
 2003-06-01  Bradley Bell  <btb@icculus.org>
 
 	* Makefile.am, arch/sdl/event.c, configure.ac,
